[package]
name = "gamejambot"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight = {git = "https://github.com/twilight-rs/twilight.git" }
dotenv = "0.15.0"
tokio = "0.2.18"
