[package]
name = "gamejambot"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight = {git = "https://github.com/twilight-rs/twilight.git" }
dotenv = "0.15.0"
tokio = "0.2.18"
serde_json = "1.0.51"
serde = "1.0.106"
serde_derive = "1.0.106"
anyhow = "1.0.28"
lazy_static = "1.4.0"
regex = "1.3.6"
